<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_gradiant"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    tools:visibility="visible">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/my_menu" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/my_toolbar">

        </include>

        <TextView
            android:id="@+id/Cursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/actividad"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:background="@drawable/search_edt_backgroud"
            android:drawableStart="@drawable/search"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:autofillHints="search"/>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:columnCount="2"
            android:rowCount="4">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_shadow">

                    <ImageView
                        android:id="@+id/bodyPump"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/body_pumb"
                        android:contentDescription="@string/bodyPumb"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_shadow">

                    <ImageView
                        android:id="@+id/bodyCombat"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/body_combat"
                        android:contentDescription="@string/bodyCombat"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_shadow">

                    <ImageView
                        android:id="@+id/cicling"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/cicling"
                        android:contentDescription="@string/cicling"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_shadow">

                    <ImageView
                        android:id="@+id/tonificacion"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/tonificacion"
                        android:contentDescription="@string/tonificacion"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_shadow">

                    <ImageView
                        android:id="@+id/yoga"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/yoga"
                        android:contentDescription="@string/yoga"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_shadow">

                    <ImageView
                        android:id="@+id/pilates"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/pilates"
                        android:contentDescription="@string/pilates"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_shadow">

                    <ImageView
                        android:id="@+id/zumba"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/zumba"
                        android:contentDescription="@string/zumba"/>
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>